overflow bug fixed

--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ button:hover{
 
 .right > *{
   float:right;
-  margin:25px 10px 50% 0;
+  margin:25px 10px 0  0;
   transform: translateY(-50%);
 }
 
@@ -137,7 +137,7 @@ nav{
 /* Jumbotron texts and buttom */
 
 #JumboBottom{
-  background-image:linear-gradient(to right , #afebe4 0% , #1f9d85 100% );
+  background-color: #02abb3;
   position: absolute;
   bottom:85px;
   right:0;
@@ -337,7 +337,7 @@ ul{
 
 #table{
   display: inline-block;
-  background-image:linear-gradient(to top right , #229f87 30% ,  #00acb6 100% );
+  background-color: #02abb3;
   width:100%;
   color:white;
   padding:3% 0 6% 0;
@@ -513,7 +513,7 @@ border-right: 1px solid white;
 /* footer */
 
 footer{
-  background-image:linear-gradient(to top  , rgb(31, 24, 36) 30% , #32495b 100% );
+  background-color: #304456;
   margin:auto;
   width:100%;
   padding-bottom: 50px;
@@ -596,7 +596,8 @@ footer li{
 
 footer hr{
   width:80%;
-  margin:auto;
+margin: auto;
+overflow: hidden;
   color: #dadee0;
 }
 
